examples/errors/son0018_yes_afterFunction.js
defineFunction()

function foo() {
    
}

yes(a === 10)
